salesforce_sfdx/main/default/objects/MX_CommonLog__c/MX_CommonLog__c.object-meta.xml
<CustomObject>
    <label>Common Log</label>
    <nameField>
        <displayFormat>Log - {000}</displayFormat>
        <label>Log Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Common Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>