salesforce_sfdx/main/default/objects/MX_CommonLog__c/fields/MX_ComponentName__c.field-meta.xml
<CustomField>
    <fullName>MX_ComponentName__c</fullName>
    <label>Component Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>