salesforce_sfdx/main/default/objects/MX_CommonLog__c/fields/MX_ComponentType__c.field-meta.xml
<CustomField>
    <fullName>MX_ComponentType__c</fullName>
    <label>Component Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>