salesforce_sfdx/main/default/objects/MX_CommonLog__c/fields/MX_LoggingLevel__c.field-meta.xml
<CustomField>
    <fullName>MX_LoggingLevel__c</fullName>
    <label>Logging Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>FINE</fullName>
            </value>
            <value>
                <fullName>DEBUG</fullName>
            </value>
            <value>
                <fullName>INFO</fullName>
            </value>
            <value>
                <fullName>WARN</fullName>
            </value>
            <value>
                <fullName>ERROR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>