salesforce_sfdx/main/default/objects/MX_CommonLog__c/fields/MX_Message__c.field-meta.xml
<CustomField>
    <fullName>MX_Message__c</fullName>
    <label>Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>