salesforce_sfdx/main/default/objects/MX_CommonLog__c/fields/MX_Stacktrace__c.field-meta.xml
<CustomField>
    <fullName>MX_Stacktrace__c</fullName>
    <label>Stacktrace</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>